force-app/main/default/objects/ServiceAppointment/fields/MR_Creation_Status__c.field-meta.xml
<CustomField>
    <fullName>MR_Creation_Status__c</fullName>
    <description>Draft = working on the record
Deleted = marked for deleting
Updated = change dates
ChangeTech = change technician</description>
    <inlineHelpText>Draft = working on the record
Deleted = marked for deleting
Updated = change dates
ChangeTech = change technician</inlineHelpText>
    <label>MR Create/Update Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>ChangeTech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>