force-app/main/default/objects/ServiceAppointment/fields/MR_DT_Conflict_Details__c.field-meta.xml
<CustomField>
    <fullName>MR_DT_Conflict_Details__c</fullName>
    <description>This is a Text string - Concatenating the &quot;SAs Number + Subject&quot; and the &quot;RA Number + Type&quot; of the SA&apos;s and RAs that conflict with this date range.</description>
    <inlineHelpText>This is a Text string - Concatenating the &quot;SAs Number + Subject&quot; and the &quot;RA Number + Type&quot; of the SA&apos;s and RAs that conflict with this date range.</inlineHelpText>
    <label>Conflict Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>