force-app/main/default/objects/ServiceAppointment/fields/MR_DT_Percent_Availability__c.field-meta.xml
<CustomField>
    <fullName>MR_DT_Percent_Availability__c</fullName>
    <description>this field stores the percent availability of the resource for the date of this service appointment. It is calculated as blocked hours/job duration, where blocked hours is the sum of resource absences and overlapping service appointments for this date.</description>
    <label>% Availability</label>
    <length>10</length>
    <type>Text</type>
</CustomField>