force-app/main/default/objects/ServiceAppointment/fields/MR_DT_Skill_Levels_Matched__c.field-meta.xml
<CustomField>
    <fullName>MR_DT_Skill_Levels_Matched__c</fullName>
    <description>Stores the number of skills matched vs required - for example 3 / 5, representing the tech had 3 skills with the necessary skill level out of the 5 required.</description>
    <label># Skills Matched</label>
    <length>25</length>
    <type>Text</type>
</CustomField>