force-app/main/default/objects/ServiceAppointment/fields/MR_Parent_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>MR_Parent_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MR Parent Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_AppointmentsMR</relationshipName>
    <type>Lookup</type>
</CustomField>