force-app/main/default/objects/ServiceAppointment/fields/MR_Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>MR_Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_AppointmentsMR</relationshipName>
    <type>Lookup</type>
</CustomField>